# std-print-like

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: print.h
src/: main.cpp
test/: Makefile
